--- a/index.html
+++ b/index.html
@@ -1,37 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Questrial&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Parrot!</title>
-  </head>
-  <body>
-    <section>
-      <div class="card">
-        <a href="index.html"><img src="assets/logo.png" alt="" /></a>
-        <p>LOGIN</p>
-        <input class="input" type="email" placeholder="email" />
-        <input class="input" type="password" placeholder="senha" />
-        <button class="btn" type="submit">entrar</button>
-        <a
-          href="cadastro.html"
-          style="
-            margin-bottom: 65px;
-            font-weight: 400;
-            font-size: 18px;
-            color: #555555;
-          "
-          >cadastre-se</a
-        >
-      </div>
-    </section>
-  </body>
+ <head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="src/assets/icone-head.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link
+   href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+   rel="stylesheet"
+   integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+   crossorigin="anonymous"
+  />
+  <link rel="stylesheet" href="src/App.css">
+  <title>parrot!</title>
+ </head>
+ <body>
+  <div id="root"></div>
+  <script
+   src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+   integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+   crossorigin="anonymous"
+  ></script>
+  <script type="module" src="/src/main.tsx"></script>
+ </body>
 </html>
